Initial multilingual support

--- a/_posts/en/0100-01-01-help.html
+++ b/_posts/en/0100-01-01-help.html
@@ -1,6 +1,9 @@
 ---
 title: Setup Email
 layout: default
+lang: en
+categories:
+  - en
 bodyclass: email
 heading: Help & Support
 subheading: How to get help with Ghost.
