--- a/_posts/en/0100-01-01-installation.html
+++ b/_posts/en/0100-01-01-installation.html
@@ -1,6 +1,9 @@
 ---
 title: Installing Ghost
 layout: default
+lang: en
+categories:
+  - en
 bodyclass: installation
 heading: Installing Ghost &amp; Getting Started
 subheading: The first steps to setting up your new blog for the first time.
