--- a/_posts/en/0100-01-01-quickstart.html
+++ b/_posts/en/0100-01-01-quickstart.html
@@ -1,6 +1,9 @@
 ---
 title: Ghost Quickstart
 layout: default
+lang: en
+categories:
+  - en
 bodyclass: installation
 heading: Ghost Quickstart
 subheading: Get up and running with Ghost.
