--- a/_posts/en/0100-01-01-themes.html
+++ b/_posts/en/0100-01-01-themes.html
@@ -1,6 +1,9 @@
 ---
 title: Theming Ghost
 layout: default
+lang: en
+categories:
+  - en
 bodyclass: themes
 heading: Ghost Themes
 subheading: Get started creating your own themes for Ghost
