--- a/_posts/en/0100-01-01-usage.html
+++ b/_posts/en/0100-01-01-usage.html
@@ -1,9 +1,11 @@
 ---
 title: Using Ghost
 layout: default
+lang: en
+categories:
+  - en
 bodyclass: usage
 heading: Using Ghost
-
 ---
 
 <div class="container">
