Refactored multilingual support
No-longer posts and English is now on base URL.

--- a/es/themes/index.html
+++ b/es/themes/index.html
@@ -1,9 +1,8 @@
 ---
 title: Theming Ghost
 layout: default
-lang: en
-categories:
-  - en
+lang: es
+lang-url: es/
 bodyclass: themes
 heading: Ghost Themes
 subheading: Get started creating your own themes for Ghost
