--- a/es/help/index.html
+++ b/es/help/index.html
@@ -1,9 +1,8 @@
 ---
 title: Setup Email
 layout: default
-lang: en
-categories:
-  - en
+lang: es
+lang-url: es/
 bodyclass: email
 heading: Help & Support
 subheading: How to get help with Ghost.
