--- a/es/mail/index.html
+++ b/es/mail/index.html
@@ -1,9 +1,8 @@
 ---
 title: Setup Email
 layout: default
-lang: en
-categories:
-  - en
+lang: es
+lang-url: es/
 bodyclass: email
 heading: Setting up Email
 ---
