--- a/es/quickstart/quickstart.html
+++ b/es/quickstart/quickstart.html
@@ -1,9 +1,8 @@
 ---
 title: Ghost Quickstart
 layout: default
-lang: en
-categories:
-  - en
+lang: es 
+lang-url: es/
 bodyclass: installation
 heading: Ghost Quickstart
 subheading: Get up and running with Ghost.
