--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 ---
+published: true
+title: Getting Started with Ghost
+layout: home
+lang: en
+bodyclass: home
 ---
-<!DOCTYPE html>
-<html>
-<head>
-  <meta http-equiv='content-type' content='text/html; charset=utf-8' />
-  <meta http-equiv='refresh' content='0;url={{site.url}}/en/' />
-</head>
-</html>
+
+<div class="bs-masthead">
+  <div class="container">
+    <h1>The Ghost Guide</h1>
+    <p class="lead">Everything you need to know to set up a blog with Ghost.</p>
+    <p>
+      <a href="{{ site.url }}/{{page.lang}}/installation" class="btn btn-success btn-large">Click Here to Get Started</a>
+    </p>
+  </div>
+</div>
+
+<div id="social">
+  <div class="container">
+    <ul>
+      <li>
+        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=tryghost&repo=ghost&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+      </li>
+      <li>
+        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=tryghost&repo=ghost&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
+      </li>
+      <li class="follow-btn">
+        <a href="https://twitter.com/tryghost" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @TryGhost</a>
+      </li>
+      <li class="tweet-btn">
+        <div class="fb-like" data-href="http://www.facebook.com/TryGhostApp" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
+      </li>
+    </ul>
+  </div>
+</div>
