Initial multilingual support

--- a/es/mail/index.html
+++ b/es/mail/index.html
@@ -1,6 +1,8 @@
 ---
 title: Setup Email
 layout: default
+lang: es
+lang-url: es/
 bodyclass: email
 heading: Setting up Email
 ---
@@ -55,6 +57,7 @@ heading: Setting up Email
             <pre>
 mail: {
     transport: 'SMTP',
+    host: 'smtp.mailgun.org',
     options: {
         service: 'Mailgun',
         auth: {
@@ -70,6 +73,7 @@ mail: {
             <pre>
 mail: {
     transport: 'SMTP',
+    host: 'smtp.mailgun.org',
     options: {
         service: 'Mailgun',
         auth: {
