--- a/es/quickstart/quickstart.html
+++ b/es/quickstart/quickstart.html
@@ -1,6 +1,8 @@
 ---
 title: Ghost Quickstart
 layout: default
+lang: es 
+lang-url: es/
 bodyclass: installation
 heading: Ghost Quickstart
 subheading: Get up and running with Ghost.
