--- a/es/themes/index.html
+++ b/es/themes/index.html
@@ -1,6 +1,8 @@
 ---
 title: Theming Ghost
 layout: default
+lang: es
+lang-url: es/
 bodyclass: themes
 heading: Ghost Themes
 subheading: Get started creating your own themes for Ghost
