--- a/installation/index.html
+++ b/installation/index.html
@@ -1,6 +1,10 @@
 ---
 title: Installing Ghost
 layout: default
+lang: en
+lang-url:
+categories:
+  - en
 bodyclass: installation
 heading: Installing Ghost &amp; Getting Started
 subheading: The first steps to setting up your new blog for the first time.
