--- a/usage/index.html
+++ b/usage/index.html
@@ -1,9 +1,10 @@
 ---
 title: Using Ghost
 layout: default
+lang: en
+lang-url:
 bodyclass: usage
 heading: Using Ghost
-
 ---
 
 <div class="container">
