--- a/es/help/index.html
+++ b/es/help/index.html
@@ -1,6 +1,8 @@
 ---
 title: Setup Email
 layout: default
+lang: es
+lang-url: es/
 bodyclass: email
 heading: Help & Support
 subheading: How to get help with Ghost.
