--- a/es/help/index.html
+++ b/es/help/index.html
@@ -1,10 +1,8 @@
 ---
-title: Setup Email
-layout: default
 lang: es
-lang-url: es/
-bodyclass: email
-heading: Help & Support
+layout: default
+meta_title: Setup Email
+heading: Help &amp; Support
 subheading: How to get help with Ghost.
 ---
 
@@ -22,8 +20,6 @@ subheading: How to get help with Ghost.
                 </ul>
             </nav>
         </aside>
-
-
 
         <section id="content" class="col-lg-9">
             <h2 id="help">Help</h2>
