--- a/es/index.html
+++ b/es/index.html
@@ -1,10 +1,7 @@
 ---
-published: true
-title: Getting Started with Ghost
-layout: home
 lang: es
-lang-url: es/
-bodyclass: home
+layout: default
+meta_title: Getting Started with Ghost
 ---
 
 <div class="bs-masthead">
@@ -12,7 +9,7 @@ bodyclass: home
     <h1>The Ghost Guide in Spanish</h1>
     <p class="lead">Everything you need to know to set up a blog with Ghost in Spanish.</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang-url}}installation" class="btn btn-success btn-large">Click Here to Get Started in Spanish</a>
+      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Click Here to Get Started in Spanish</a>
     </p>
   </div>
 </div>
