--- a/es/mail/index.html
+++ b/es/mail/index.html
@@ -1,9 +1,7 @@
 ---
-title: Setup Email
-layout: default
 lang: es
-lang-url: es/
-bodyclass: email
+layout: default
+meta_title: Setup Email
 heading: Setting up Email
 ---
 
