--- a/es/quickstart/quickstart.html
+++ b/es/quickstart/quickstart.html
@@ -1,9 +1,7 @@
 ---
-title: Ghost Quickstart
-layout: default
 lang: es 
-lang-url: es/
-bodyclass: installation
+layout: default
+meta_title: Ghost Quickstart
 heading: Ghost Quickstart
 subheading: Get up and running with Ghost.
 ---
