--- a/es/themes/index.html
+++ b/es/themes/index.html
@@ -1,9 +1,7 @@
 ---
-title: Theming Ghost
-layout: default
 lang: es
-lang-url: es/
-bodyclass: themes
+layout: default
+meta_title: Theming Ghost
 heading: Ghost Themes
 subheading: Get started creating your own themes for Ghost
 ---
