--- a/es/usage/index.html
+++ b/es/usage/index.html
@@ -1,9 +1,7 @@
 ---
-title: Using Ghost
-layout: default
 lang: es
-lang-url: es/
-bodyclass: usage
+layout: default
+meta_title: Using Ghost
 heading: Using Ghost
 ---
 
