--- a/help/index.html
+++ b/help/index.html
@@ -1,10 +1,7 @@
 ---
-title: Setup Email
 layout: default
-lang: en
-lang-url:
-bodyclass: email
-heading: Help & Support
+meta_title: Setup Email
+heading: Help &amp; Support
 subheading: How to get help with Ghost.
 ---
 
