--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 ---
-published: true
-title: Getting Started with Ghost
 layout: default
-lang: en
-lang-url:
-bodyclass: home
+meta_title: Getting Started with Ghost
 ---
 
 <script>(function(d, s, id) {
@@ -21,7 +17,7 @@ bodyclass: home
     <h1>The Ghost Guide</h1>
     <p class="lead">Everything you need to know to set up a blog with Ghost.</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang-url}}installation" class="btn btn-success btn-large">Click Here to Get Started</a>
+      <a href="{{ site.url }}/installation" class="btn btn-success btn-large">Click Here to Get Started</a>
     </p>
   </div>
 </div>
