--- a/installation/index.html
+++ b/installation/index.html
@@ -1,11 +1,6 @@
 ---
-title: Installing Ghost
 layout: default
-lang: en
-lang-url:
-categories:
-  - en
-bodyclass: installation
+meta_title: Installing Ghost
 heading: Installing Ghost &amp; Getting Started
 subheading: The first steps to setting up your new blog for the first time.
 ---
