--- a/mail/index.html
+++ b/mail/index.html
@@ -1,9 +1,6 @@
 ---
-title: Setup Email
 layout: default
-lang: en
-lang-url:
-bodyclass: email
+meta_title: Setup Email
 heading: Setting up Email
 ---
 
