--- a/quickstart/quickstart.html
+++ b/quickstart/quickstart.html
@@ -1,9 +1,6 @@
 ---
-title: Ghost Quickstart
 layout: default
-lang: en
-lang-url:
-bodyclass: installation
+meta_title: Ghost Quickstart
 heading: Ghost Quickstart
 subheading: Get up and running with Ghost.
 ---
