--- a/themes/index.html
+++ b/themes/index.html
@@ -1,9 +1,6 @@
 ---
-title: Theming Ghost
 layout: default
-lang: en
-lang-url:
-bodyclass: themes
+meta_title: Theming Ghost
 heading: Ghost Themes
 subheading: Get started creating your own themes for Ghost
 ---
