--- a/usage/index.html
+++ b/usage/index.html
@@ -1,9 +1,6 @@
 ---
-title: Using Ghost
 layout: default
-lang: en
-lang-url:
-bodyclass: usage
+meta_title: Using Ghost
 heading: Using Ghost
 ---
 
