--- a/es/installation/index.html
+++ b/es/installation/index.html
@@ -1,9 +1,7 @@
 ---
-title: Installing Ghost
-layout: default
 lang: es
-lang-url: es/
-bodyclass: installation
+layout: default
+meta_title: Installing Ghost
 heading: Installing Ghost &amp; Getting Started
 subheading: The first steps to setting up your new blog for the first time.
 ---
@@ -32,7 +30,7 @@ subheading: The first steps to setting up your new blog for the first time.
 
             <h1 id="overview">Overview</h1>
 
-            <p>The Ghost documentation is very much a work in progress, it is updated and improved regularly. If you get stuck or have suggestions for improvements, let us know.</p>
+            <p>Donde esta Ghost documentation is very much a work in progress, it is updated and improved regularly. If you get stuck or have suggestions for improvements, let us know.</p>
 
             <p>Ghost is built on <a href="http:://nodejs.org">Node</a>, and requires version <code>0.10.*</code> (latest stable version).</p>
 
