Cleanup and new sidebar

--- a/installation/index.html
+++ b/installation/index.html
@@ -10,18 +10,13 @@ subheading: The first steps to setting up your new blog for the first time.
         <aside id="sidebar" class="col-lg-3">
             <nav class="bs-sidebar">
                 <ul class="nav bs-sidenav">
-
-                    <li class="active">
-                        <a href="#overview">Overview</a>
-                        <ul class="nav">
-                            <li class="active"><a href="#install-mac">Mac</a></li>
-                            <li class=""><a href="#install-windows">Windows</a></li>
-                            <li class=""><a href="#install-linux">Linux</a></li>
-                            <li class=""><a href="#deploy">Live Server</a></li>
-                            <li class=""><a href="#upgrade">Upgrading</a></li>
-                            <li class=""><a href="#troubleshooting">Troubleshooting</a></li>
-                        </ul>
-                    </li>
+                    <li class="active"><a href="#overview">Overview</a></li>
+                    <li><a href="#install-mac">Mac</a></li>
+                    <li><a href="#install-windows">Windows</a></li>
+                    <li><a href="#install-linux">Linux</a></li>
+                    <li><a href="#deploy">Live Server</a></li>
+                    <li><a href="#upgrade">Upgrading</a></li>
+                    <li><a href="#troubleshooting">Troubleshooting</a></li>
                 </ul>
             </nav>
         </aside>
