--- a/quickstart/quickstart.html
+++ b/quickstart/quickstart.html
@@ -10,15 +10,10 @@ subheading: Get up and running with Ghost.
         <aside id="sidebar" class="col-lg-3">
             <nav class="bs-sidebar">
                 <ul class="nav bs-sidenav">
-
-                    <li class="active">
-                        <a href="#overview">Overview</a>
-                        <ul class="nav">
-                            <li class="active"><a href="#ghost-local">Local Install</a></li>
-                            <li class=""><a href="#customise">Customise</a></li>
-                            <li class=""><a href="#ghost-deploy">Deploy Ghost</a></li>
-                        </ul>
-                    </li>
+                    <li class="active"><a href="#overview">Overview</a></li>
+                    <li class="active"><a href="#ghost-local">Local Install</a></li>
+                    <li class=""><a href="#customise">Customise</a></li>
+                    <li class=""><a href="#ghost-deploy">Deploy Ghost</a></li>
                 </ul>
             </nav>
         </aside>
