--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-meta_title: Getting Started with Ghost
+meta_title: The Ghost Guide - Getting Started with Ghost
+meta_description: An in depth guide for working with Ghost. Install, set up, usage, and how to make themes and plugins.
 ---
 
 <script>(function(d, s, id) {
