--- a/installation/index.html
+++ b/installation/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-meta_title: Installing Ghost
+meta_title: How to Install Ghost on Your Server - Ghost Docs
+meta_description: Everything you need to get the Ghost blogging platform up and running on your local or remote environement.
 heading: Installing Ghost &amp; Getting Started
 subheading: The first steps to setting up your new blog for the first time.
 ---
