--- a/mail/index.html
+++ b/mail/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-meta_title: Setup Email
+meta_title: Ghost Mail Configuration - Ghost Docs
+meta_description: How to configure your email server and send emails with the Ghost blogging platform. Everything you need to know.
 heading: Setting up Email
 ---
 
