--- a/themes/index.html
+++ b/themes/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-meta_title: Theming Ghost
+meta_title: How to Make Ghost Themes - Ghost Docs
+meta_description: An in depth guide to making themes for the Ghost blogging platform. Everything you need to know to build themes for Ghost.
 heading: Ghost Themes
 subheading: Get started creating your own themes for Ghost
 ---
