--- a/usage/index.html
+++ b/usage/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-meta_title: Using Ghost
+meta_title: How to Use Ghost - Ghost Docs
+meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
 heading: Using Ghost
 ---
 
