--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ meta_title: The Ghost Guide - Getting Started with Ghost
 meta_description: An in depth guide for working with Ghost. Install, set up, usage, and how to make themes and plugins.
 ---
 
+<div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
