--- a/themes/index.html
+++ b/themes/index.html
@@ -123,12 +123,13 @@ subheading: Get started creating your own themes for Ghost
                 <li>author – <em>full details of the post author</em> (see below for more details)</li>
             </ul>
             <p>Each of these properties can be output using the standard handlebars expression, e.g. <code>{{title}}</code>.</p>
-            <p><strong>Notes:</strong>
+            <div class="note"><p>
+                <strong>Notes:</strong>
                 <ul>
                     <li>the content property is overridden and output by the <code>{{content}}</code> helper which ensures the HTML is output safely &amp; correctly. See the section on the <a href="#content-helper"><code>{{content}}</code> helper</a>  for more info.</li>
                     <li>the url property provided by the <code>{{url}}</code> helper. See the section on the <a href="#url-helper"><code>{{url}}</code> helper</a> for more info.</li>
                 </ul>
-            </p>
+            </p></div>
 
             <h4>Post author</h4>
 
