--- a/themes/index.html
+++ b/themes/index.html
@@ -52,23 +52,20 @@ subheading: Get started creating your own themes for Ghost
             <h2 id="file-structure">The File Structure of a Ghost Theme</h2>
 
             <p>The recommended file structure is:</p>
-            <ul>
-                <li>/css
-
-                    <ul>
-                        <li>style.css</li>
-                        <li>post.css</li>
-                    </ul>
-                </li>
-                <li>/fonts</li>
-                <li>/images</li>
-                <li>/js</li>
-                <li>/lib</li>
-                <li>/partials</li>
-                <li>default.hbs</li>
-                <li>index.hbs [required]</li>
-                <li>post.hbs [required]</li>
-            </ul>
+            <pre>
+.
+├── /css
+|   ├── style.css
+|   └── post.css
+├── /fonts
+├── /images
+├── /js
+├── /lib
+├── /partials
+├── default.hbs
+├── index.hbs [required]
+└── post.hbs [required]
+            </pre>
             <p>For the time being there is no requirement that default.hbs or any of the folders exist. <code>index.hbs</code> and <code>post.hbs</code> are required – Ghost will not work if these two templates are not present. <code>partials</code> is a special directory. This should include any part templates you want to use across your blog, for example <code>list-post.hbs</code> might include your template for outputting a single post in a list, which might then be used on the homepage, and in future archive &amp; tag pages. <code>partials</code> is also where you can put templates to override the built-in templates used by certain helpers like pagination. Including a <code>pagination.hbs</code> file inside <code>partials</code> will let you specify your own HTML for pagination.</p>
 
             <h3>default.hbs</h3>
