--- a/usage/index.html
+++ b/usage/index.html
@@ -19,7 +19,7 @@ heading: Using Ghost
             <h2 id="running-ghost">Running Ghost</h2>
 
             <ol>
-                <li>Go to <code>&lt;your URL&gt;/ghost/signup/</code></li>
+                <li>Go to <code class="path">&lt;your URL&gt;/ghost/signup/</code></li>
                 <li>Enter your user details</li>
             </ol>
 
@@ -28,9 +28,9 @@ heading: Using Ghost
 
             <h2 id="config-ghost">Configuring Ghost</h2>
 
-            <p>Go to <code>&lt;your URL&gt;/ghost/settings/</code>.</p>
+            <p>Go to <code class="path">&lt;your URL&gt;/ghost/settings/</code>.</p>
 
-            <h3>Blog Settings (<code>/general/</code>)</h3>
+            <h3>Blog Settings (<code class="path">/general/</code>)</h3>
 
             <p>These are the Blog specific settings</p>
 
@@ -45,7 +45,7 @@ heading: Using Ghost
 
             <p>This will update all your Blog settings, you can check these by visiting your Blog URL.</p>
 
-            <h3>User Settings (<code>/user/</code>)</h3>
+            <h3>User Settings (<code class="path">/user/</code>)</h3>
 
             <p>These are the settings that control your User profile.</p>
 
@@ -62,7 +62,7 @@ heading: Using Ghost
             <h2>Write a Post</h2>
 
             <ol>
-                <li>Go to <code>&lt;your URL&gt;/ghost/editor/</code></li>
+                <li>Go to <code class="path">&lt;your URL&gt;/ghost/editor/</code></li>
                 <li>Enter a Post Title</li>
                 <li>Enter your content using <a href="http://daringfireball.net/projects/markdown/syntax">Markdown</a></li>
                 <li>Save your Post as Draft by clicking the 'Save Draft' button, or press Ctrl / CMD + S.</li>
